--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Droid Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .navbar
@@ -27,10 +27,10 @@ body {
 
 #myCarousel
 {
-	height: 800px;
+	height: 450px;
 	background-color: #CECECE; 
-	background-image: url('../images/cropped_home.jpg');
-	background-size: auto 102%;
+	background-image: url('../images/cropped_home_4.png');
+	background-size: 100% auto;
 	background-repeat:no-repeat; 
 	background-position:center top; 
 }
@@ -38,13 +38,15 @@ body {
 #myCarouselCaption
 {
 	z-index: 2;
-	margin-top: 550px; 
+	margin-top: 160px; 
 	padding: 10px; 
-	color: #1C1C1C; 
-	background-color: rgba(240, 240, 240, 0.7); 
-	border: 2px solid #CECECE;
-	text-align: center;
+	color: #FFFFFF; 
 	font-size: 1.3em;
+	width: 300px;
+}
+
+.row {
+	margin-top: 40px;
 }
 
 .col-lg-4
