--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -1,16 +1,39 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    color: #333;
+}
+
+body a {
+	color: #01A797;
+}
+
+h1, h2 {
+	font-family: 'Roboto Slab';
+	font-weight: 700;
+}
+
+h1 {
+	font-size: 44px;
+}
+
+footer {
+	background-color: #303030;
+	color: #6e6e6e;
+}
+
+.container {
+	max-width: 940px;
 }
 
 .navbar
 {
-	background-color: #fff;
-	border-top: 5px solid #ff4040;
+	background-color: #303030;
+	border-bottom: 5px solid #ff4040;
 }
 
 .navbar a
 {
-	color: #1C1C1C;
+	color: #FFFFFF;
 }
 
 .navbar .container { height: 2em; width: 100%; }
@@ -18,18 +41,30 @@ body {
 .navbar-brand
 {
 	max-width: 350px;
+	font-family: 'Roboto Slab';
+	font-size: 16px;
+	padding: 20px 15px;
 }
 
 .nav-collapse
 {
-	background-color: #fff;
+	float: right;
+}
+
+.navbar-nav > li > a {
+	color: #FFFFFF;
+	font-size: 14px;
+	padding: 20px 24px;
+	font-weight: 400;
 }
 
 #myCarousel
 {
+	margin-top: 63px;
+	margin-bottom: 50px;
 	height: 450px;
 	background-color: #CECECE; 
-	background-image: url('../images/cropped_home_4.png');
+	background-image: url('../images/cropped_home_5.png');
 	background-size: 100% auto;
 	background-repeat:no-repeat; 
 	background-position:center top; 
@@ -38,15 +73,88 @@ body {
 #myCarouselCaption
 {
 	z-index: 2;
-	margin-top: 160px; 
+	margin-top: 100px; 
 	padding: 10px; 
 	color: #FFFFFF; 
 	font-size: 1.3em;
-	width: 300px;
+	width: 400px;
+}
+
+#myCarouselCaption h1 {
+	margin-bottom: 20px;
+}
+
+#mission {
+	text-align: center;
+	font-size: 28px;
+	margin-left: 30px;
+	margin-right: 50px;
+	font-weight: 300;
+}
+
+.call-to-action {
+	width: 280px;
+	height: 180px;
+}
+
+a.call-to-action {
+	display: block;
+	position: relative;
+	width: 290px;
+	height: 180px;
+	background-size: 290px 290px;
+	color: #FFFFFF;
+	font-family: "Roboto Slab";
+	font-size: 32px;
+	font-weight: 700;
+	padding: 70px 50px;
+	text-align: center;
+}
+
+#projects {
+	background-image: url("../images/local1.jpg");
+}
+
+#volunteer {
+	background-image: url("../images/nicaragua1.jpg");
+}
+
+#donate {
+	background-image: url("../images/hongkong1.jpg");
+}
+
+a.call-to-action:hover {
+	text-decoration: none;
+}
+
+a.call-to-action span {
+	z-index: 5;
+	position: relative;
+}
+
+.cover::before {
+	content: '';
+	z-index: 2;
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.45);
+}
+
+.cover:hover::before {
+	background: transparent;
+}
+
+.btn-default {
+	background-color: #01A797;
+	border: 0;
 }
 
 .row {
-	margin-top: 40px;
+	margin-top: 30px;
 }
 
 .col-lg-4
