changed header background-size to cover... nice new trick haha

--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -62,10 +62,10 @@ footer {
 {
 	margin-top: 63px;
 	margin-bottom: 50px;
-	height: 450px;
+	height: 464px;
 	background-color: #CECECE; 
 	background-image: url('../images/cropped_home_5.png');
-	background-size: 100% auto;
+	background-size: cover;
 	background-repeat:no-repeat; 
 	background-position:center top; 
 }
