--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -32,6 +32,10 @@ footer a {
 	max-width: 940px;
 }
 
+#dlpmainheader {
+	text-transform: lowercase;
+}
+
 .navbar
 {
 	background-color: #303030;
@@ -91,7 +95,7 @@ footer a {
 	margin-bottom: 20px;
 }
 
-#mission {
+.section-header {
 	text-align: center;
 	font-size: 28px;
 	margin-left: 30px;
@@ -158,7 +162,7 @@ footer a {
 }
 
 .btn-default {
-	background-color: #01A797;
+	background-color: #01B2A1;
 	border: 0;
 	font-size: 18px;
 }
@@ -185,9 +189,11 @@ footer a {
 }
 
 #impact {
-	background: #3EBAA8;
+	background: #01B2A1;
 	color: #FFFFFF;
 	padding-top: 50px;
+	min-height: 410px;
+	margin-top: 0;
 }
 
 #impact p {
@@ -204,12 +210,6 @@ footer a {
 .stat-description {
 	font-size: 16px;
 	font-weight: 300;
-}
-
-.initiatives
-{
-	min-height: 280px;
-	margin-top: 0;
 }
 
 .initiatives h2
