--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -42,9 +42,9 @@ footer a {
 	border-bottom: 5px solid #ff4040;
 }
 
-.navbar a
+.navbar-nav > li > a:hover
 {
-	color: #FFFFFF;
+	color: #777;
 }
 
 .navbar .container { height: 2em; width: 100%; }
@@ -55,6 +55,11 @@ footer a {
 	font-family: 'Roboto Slab';
 	font-size: 16px;
 	padding: 20px 15px;
+	color: #FFFFFF;
+}
+
+.navbar-brand:hover {
+	color: #777;
 }
 
 .nav-collapse
@@ -98,7 +103,7 @@ footer a {
 .section-header {
 	text-align: center;
 	font-size: 28px;
-	margin-left: 30px;
+	margin-left: 50px;
 	margin-right: 50px;
 	font-weight: 300;
 }
@@ -162,7 +167,7 @@ footer a {
 }
 
 .btn-default {
-	background-color: #01B2A1;
+	background-color: #00A3A3;
 	border: 0;
 	font-size: 18px;
 }
@@ -189,11 +194,11 @@ footer a {
 }
 
 #impact {
-	background: #01B2A1;
+	background: #00B5B5;
 	color: #FFFFFF;
 	padding-top: 50px;
 	min-height: 410px;
-	margin-top: 0;
+	margin: 0;
 }
 
 #impact p {
