--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -5,7 +5,12 @@ body {
 }
 
 body a {
-	color: #01A797;
+	color: #00A3A3;
+}
+
+body a:hover {
+	text-decoration: none;
+	color: #0FB8B8;
 }
 
 h1, h2 {
@@ -31,6 +36,11 @@ footer a {
 footer a:hover {
 	text-decoration: none;
 	color: rgb(200,200,200);
+}
+
+::selection {
+	background: #00A3A3;
+	color: #FFFFFF;
 }
 
 .container {
@@ -145,6 +155,10 @@ footer a:hover {
 	text-align: center;
 }
 
+.call-to-action a:hover {
+	color: #FFFFFF;
+}
+
 #projects {
 	background-image: url("../images/local1.jpg");
 }
@@ -211,7 +225,7 @@ footer a:hover {
 	font-size: 32px;
 }
 
-#apply-row {
+.centered {
 	text-align: center;
 }
 
@@ -294,5 +308,46 @@ p.stat {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-right: 200px;
-
 }
+
+#make-a-difference {
+	font-size: 32px;
+	font-weight: 700;
+	color: #00A3A3;
+	border-top: 1px dotted #BBB;
+	border-bottom: 1px dotted #BBB;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 100px;
+	padding-right: 100px;
+}
+
+#sponsors-list {
+	margin-top: 50px;
+}
+
+#team h2 {
+	font-family: 'Roboto Slab';
+	font-weight: 700;
+	margin-top: 10px;
+}
+
+#team h4 {
+	text-transform: uppercase;
+	font-family: 'Roboto Slab';
+	font-size: 16px;
+}
+
+#team .col-lg-4 {
+	text-align: right;
+}
+
+#team .col-lg-4 img {
+	width: 260px;
+	height: 260px;
+}
+
+#team .col-lg-8 p {
+	padding-right: 80px;
+}
+
