--- a/files/assets/css/dlp.css
+++ b/files/assets/css/dlp.css
@@ -16,7 +16,7 @@ body a:hover {
 h1, h2, h3, h4 {
 	font-family: 'Roboto Slab';
 	font-weight: 700;
-}
+}nav
 
 h1 {
 	font-size: 44px;
@@ -40,7 +40,7 @@ footer a:hover {
 
 .paypal button {
 	font-size: 32px;
-}
+}nav
 
 button:focus {
 	outline-width: none;
@@ -67,6 +67,7 @@ button:focus {
 {
 	background-color: #303030;
 	border-bottom: 3px solid #ff4040;
+	box-shadow: 0 2px 10px rgba(0,0,0,0.25);
 }
 
 .row p {
@@ -100,7 +101,8 @@ button:focus {
 .navbar-nav > li > a:hover
 {
 	color: #FFF;
-	transition: color .15s ease-in-out;
+	transition: color .15s ease-in-out, background-color .15s ease-in-out;
+	background-color: #ff4040;
 }
 
 /*.navbar-nav > li:hover ~ li > a, .navbar-nav > li:not(:hover) ~ li > a:hover
